--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 
-
+<!-- <app-auth-index></app-auth-index> -->
 <router-outlet></router-outlet>
