--- a/src/app/components/dashboard/pages/dashboard-index/dashboard.component.html
+++ b/src/app/components/dashboard/pages/dashboard-index/dashboard.component.html
@@ -1,6 +1,9 @@
-<div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="display-4">Home dashboard</h1>
-      <p class="lead">Welcome to dashboard page.</p>
-    </div>
-  </div>
+<h1>Home</h1>
+<p>You're logged in with Angular 6 & JWT!!</p>
+<div>
+    Users from secure api end point:
+    <ul>
+        <li *ngFor="let user of users">{{user.firstName}} {{user.lastName}}</li>
+    </ul>
+</div>
+<p><a [routerLink]="['/login']">Logout</a></p>
