--- a/src/app/components/dashboard/pages/dashboard-index/dashboard.component.html
+++ b/src/app/components/dashboard/pages/dashboard-index/dashboard.component.html
@@ -1,4 +1,4 @@
-<h1>Home</h1>
+<!-- <h1>Home</h1>
 <p>You're logged in with Angular 6 & JWT!!</p>
 <div>
     Users from secure api end point:
@@ -6,4 +6,4 @@
         <li *ngFor="let user of users">{{user.firstName}} {{user.lastName}}</li>
     </ul>
 </div>
-<p><a [routerLink]="['/login']">Logout</a></p>
+<p><a [routerLink]="['/login']">Logout</a></p> -->
