--- a/src/app/components/user/pages/user-index/user.component.html
+++ b/src/app/components/user/pages/user-index/user.component.html
@@ -1,3 +1,17 @@
-<p>
-  user works!
-</p>
+<div class="container">
+  <h1>User Form</h1>
+  <form #userForm="ngForm">
+    <div class="form-group">
+      <label for="username">Username</label>
+      <input type="text" class="form-control" id="username" required [(ngModel)]="model.username" name="username">
+    </div>
+
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" class="form-control" id="password" required [(ngModel)]="model.password" name="password">
+    </div>
+
+    <button type="submit" class="btn btn-success">Submit</button>
+
+  </form>
+</div>
