--- a/src/app/auth/forms/register-form/register-form.component.html
+++ b/src/app/auth/forms/register-form/register-form.component.html
@@ -15,6 +15,11 @@
   </div>
 
   <div class="form-group">
+    <label for="userName">Username: </label>
+    <input type="text" class="form-control" id="userName" required [(ngModel)]="entity.userName" name="userName">
+  </div>
+
+  <div class="form-group">
     <label for="password">Password: </label>
     <input type="password" class="form-control" id="password" required [(ngModel)]="entity.password" name="password">
   </div>
